# dmarc-monitor

./: .editorconfig  .gitignore  .tool-versions  README.md  go.mod  main.go  package.json
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.github/: renovate.json5
.github/actions/detect-projects/: action.yml
.github/workflows/: _ci.yml  ci.yml  devcontainer.yml  lib-dmarc.yml  libs-dmarc.yml  libs_common.yml  renovate.yml  security.yml  services_ingest-service.yml
diagrams/: justfile  overview.py  pyproject.toml
libs/cdk-constructs/: package.json  tsconfig.json
libs/cdk-constructs/lib/: dynamodb.ts  s3.ts
libs/cdk-constructs/lib/datastores/: index.ts  s3.ts
libs/cdk-constructs/lib/messaging/: sqs.ts
libs/common/: go.mod
libs/common/aws/awslocal/: lambda.go  lambda_test.go
libs/dmarc/: go.mod
pkg/dmarc/: record.go  record_test.go  rua.go  rua_test.go
pkg/dmarc/record/: record.go  record_test.go
pkg/dmarc/rua/: rua.go  rua_test.go
pkg/dmarc/testdata/: 01-multiple-valid.xml  02-single-valid.xml
services/ingest-service/: go.mod  go.sum  justfile
services/ingest-service/functions/enqueue-email/: config.go  handler.go  main.go
services/ingest-service/functions/enqueue-mail/: main.go
services/ingest-service/functions/enqueue-report/: aws.go  config.go  local.go  main.go  (+2 more)
services/ingest-service/infra/: cdk.json  package.json
services/ingest-service/sample-events/: event.json
services/tenant-service/: go.mod
services/tenant-service/infra/: package.json  tsconfig.json
services/tenant-service/schema/: schema.graphql
(+55 files in other folders)
