[tool.poetry]
name = "dmarc-monitor-diagrams"
version = "0.1.0"
description = ""
authors = ["Robert Sturla <robertsturla@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
